# Fibo

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  README_LEVELS.md  pyproject.toml
deploy/systemd/: matryoshka-bot.service
docs/: GITHUB.md  SERVER_DEPLOY.md
logs/: events.jsonl  strategy_report.json
src/matryoshka_bot/: __init__.py  main.py
src/matryoshka_bot/config/: assets.py  settings.py
src/matryoshka_bot/exchange/: bybit_client.py  bybit_clock.py
src/matryoshka_bot/journal/: store.py
src/matryoshka_bot/reporting/: level_charts.py  metrics.py  report.py
src/matryoshka_bot/risk/: sizing.py
src/matryoshka_bot/signals/: bounce.py  breakout.py  conditions_audit.py
src/matryoshka_bot/strategy/: __init__.py  levels.py  regime.py  scan_snapshot.py  scanner.py  segment.py
src/matryoshka_bot/telegram_bot/: __init__.py  app.py  handlers.py  keyboards.py  trade_alerts.py
src/matryoshka_bot/trading/: decision.py  engine.py  indicators.py  preflight.py  runtime_overrides.py  signal_evaluation.py
state/: telegram_trading.json
tests/: test_bybit_clock.py  test_level_logging.py  test_main_cli.py  test_runtime_overrides.py  test_strategy_core.py  test_telegram_audit.py  test_trade_alerts.py
tools/: generate_level_charts.py  kill_matryoshka_bot_processes.ps1
