[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matryoshka-bot"
version = "0.1.0"
description = "Bybit trading bot based on static global matryoshka levels"
requires-python = ">=3.11"
dependencies = [
  "pybit>=5.10.0",
  "python-dotenv>=1.0.0",
  "aiogram>=3.7.0",
  "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
matryoshka-bot = "matryoshka_bot.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
